namespace SeguridadYServicios
{
    public interface IObservadorIdioma
    {
        void ActualizarIdioma();
    }
}
